--- a/git y github.html
+++ b/git y github.html
@@ -10,7 +10,8 @@
             <li>Vagrant</li>
             <li>Docker</li>
             <li>Ansible</li>
-            <li>Integracion Continua</li>
+            <li>Integracion Continua : Madurez y Productividad en el desarrollo de software
+            </li>
         </ul>
     </body>
 </html>
