--- a/git y github.html
+++ b/git y github.html
@@ -3,7 +3,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Curso de Alura</title>
+        <title>Cursos de DevOps de Alura</title>
     </head>
     <body>
         <ul>
