--- a/git y github.html
+++ b/git y github.html
@@ -10,8 +10,8 @@
             <li>Vagrant</li>
             <li>Docker</li>
             <li>Ansible</li>
-            <li>Integracion Continua : Madurez y Productividad en el desarrollo de software
-            </li>
+            <li>Integracion Continua : Madurez y Productividad en el desarrollo de software</li>
+            <li>Kubernetes</li>
         </ul>
     </body>
 </html>
