Revert "cambiando nombre de Ansible"
This reverts commit f550cd3a411547838cb4cee649941d277d36543e.

--- a/git y github.html
+++ b/git y github.html
@@ -9,7 +9,7 @@
         <ul>
             <li>Vagrant : Gerenciando archivos comerciales</li>
             <li>Docker :creando containers sin dolor de cabeza</li>
-            <li>Ansible : Infraestrucura como código</li>
+            <li>Ansible</li>
             <li>Integracion Continua : Madurez y Productividad en el desarrollo de software</li>
             <li>Kubernetes</li>
         </ul>
