Cambiando el nombre del curso de kubernetes

--- a/git y github.html
+++ b/git y github.html
@@ -11,7 +11,7 @@
             <li>Docker :creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integracion Continua : Madurez y Productividad en el desarrollo de software</li>
-            <li>Kubernetes</li>
+            <li>Kubernetes : Introduccion a la orquestación de containers</li>
         </ul>
     </body>
 </html>
